Temporarily removed the registration to majs. Fixed beds.models and hospital model whom __str__ were too long and added getReas with parameter for adding one authorised rea. Added default values (equivalent to 'unknown') for patient's antecedents and allergies, added possibility to define start_date for a unit_stay Switched from sqlite to postgresql Added default response for users/auth.py in case of settings.SERVER_VERSION='dev' Fixed problem of reloading patient page returning error with re_path() and making index view redirecting to beds

--- a/server/web/static/web/css/style.css
+++ b/server/web/static/web/css/style.css
@@ -46,7 +46,7 @@ SOFTWARE.
     color: var(--white);
     text-align: center;
     font-family: var(--plainfont);
-    padding-top: 10px;
+    padding-top: 1px;
     padding-bottom: 10px;
 }
 
